<resources>
    <string name="app_name">X9</string>
    <string name="button_minor">Minor</string>
    <string name="button_moderate">Moderate</string>
    <string name="button_major">Major</string>
    <string name="text_field_report_name">Report Title</string>
    <string name="text_field_report_date">Date</string>
    <string name="text_field_description">Report Description</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="menu_report_type">Report type</string>
    <string name="menu_report_location">Report location</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="text_field_username">Username</string>
    <string name="text_field_password">Password</string>
    <string name="text_field_report_location">Report location</string>
    <string name="submit">Submit</string>
    <string name="report_type_option_1">Incident</string>
    <string name="report_type_option_2">Danger</string>
    <string name="report_type_option_3">Maintenance</string>
    <string name="report_type_option_4">Police</string>
    <string name="report_type_option_5">Other</string>
    <string name="menu">Menu</string>
    <string name="report_page_title">Report Card</string>
    <string name="add_report">Add Report</string>
    <string-array name="report_options">
        <item>@string/report_type_option_1</item>
        <item>@string/report_type_option_2</item>
        <item>@string/report_type_option_3</item>
        <item>@string/report_type_option_4</item>
        <item>@string/report_type_option_5</item>
    </string-array>
    <string name="gender_option1">Male</string>
    <string name="gender_option2">Female</string>
    <string name="gender_option3">Other</string>
    <string-array name="gender_options">
        <item>@string/gender_option1</item>
        <item>@string/gender_option2</item>
        <item>@string/gender_option3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_report">Report</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_profile">Profile</string>
    <string name="save">Save</string>
    <string name="menu_gender">Select gender</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_top_bar_title">Edit Profile</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="profile_email">Enter email</string>
</resources>