<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragment_home"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/fragment_home"
        android:name="dk.itu.moapd.x9.diko.ui.home.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_report"
            app:destination="@id/fragment_report"
            />
    </fragment>

    <fragment
        android:id="@+id/fragment_report"
        android:name="dk.itu.moapd.x9.diko.ui.report.ReportCardFragment"
        android:label="@string/fragment_report"
        tools:layout="@layout/fragment_report">
        <action
            android:id="@+id/action_report_to_home"
            app:destination="@id/fragment_home"
            />
        <action
            android:id="@+id/action_report_to_profile"
            app:destination="@id/fragment_profile"
            />
    </fragment>

    <fragment
        android:id="@+id/fragment_profile"
        android:name="dk.itu.moapd.x9.diko.ui.profile.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_report"
            app:destination="@id/fragment_report"
            />
    </fragment>




</navigation>